add social network links.

--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -35,6 +35,7 @@
             <h1><a href="{{ SITEURL }} " title="title">{{ SITENAME }}</a></h1>
             <span class="description">{{ DESCRIPTION }} </span>
             <div>{% include "subscribe.html" %}</div>
+            <div>{% include "social.html" %}</div>
             <!-- <span class="feed"><a href="">RSS</a> | <a href="">Atom</a></span> -->
         </div>
 
