--- a/themes/default/static/css/main.css
+++ b/themes/default/static/css/main.css
@@ -13,7 +13,7 @@
 @import url("pygment.css");
 
 body { margin:0px; padding:20px 0px; text-align:center; font-family:Monospace; color:#585858;  }
-a, a:visited { text-decoration:none; color:rgb(17, 170, 34);  }
+a, a:visited { text-decoration:none; color: #1abc9c;  }
 a:hover { color:#FFF; background-color:#5353CB  }
 h1, h2, h3, h4, h5, h6, h7 { margin:0px; text-transform:uppercase;  }
 h4, h5, h6 { font-size:14px;  }
