--- a/themes/default/templates/index.html
+++ b/themes/default/templates/index.html
@@ -1,34 +1,59 @@
 {% extends "base.html" %}
+{% block robots %}follow{% endblock %}
 {% block content_title %}{% endblock %}
 {% block content %}
-{% if articles %}
-    {% for article in articles %}
 
-        {# First item #}
-        {% if loop.first %}
-            <header>
-            <h1><a href="{{ SITEURL }}" id="site-title"> {# {{ SITENAME }} #} {% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a> {#:#} <a href="{{ SITEURL }}/{{ article.url }}" id="page-title">{{ article.title }}</a></h1>
-                {% if not HIDE_DATE %}<time datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time>{% endif %}
-            </header>
-
-            <article>
-                {{ article.content }}
-            </article>
-            {% if loop.length > 1 %}
-                <section id="article-list">
-                    <h2>All posts</h2>
-                    <ol>
+{% for category, articles in categories %}
+    {% if category == 'issues' %}
+        {% for article in articles %}
+            {# First item #}
+            {% if loop.first and not articles_page.has_previous() %}
+                <aside id="featured" class="body">
+                    <article>
+                        <h1 class="entry-title"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1> 
+                        {{ article.content }}
+                    </article>
+                    {% if loop.length == 1 %}
+                        {% include 'pagination.html' %}
+                    {% endif %}
+                </aside><!-- /#featured -->
+                {% if loop.length > 1 %}
+                    <section id="content" class="body">
+                        <hr />
+                        <ol id="posts-list" class="hfeed">
+                {% endif %}
+            {# other items #}
+            {% else %} 
+                {% if loop.first and articles_page.has_previous %}
+                    <section id="content" class="body">
+                {% endif %}
+                <div>
+                    <article class="hentry">
+                        <header>
+                            <h3>
+                                <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
+                                    title="Permalink to {{ article.title|striptags }}"
+                                    >{{ article.title }}</a>
+                            </h3>
+                        </header>
+                        <div class="entry-content">
+                            {{ article.summary }}
+                            <a class="readmore" href="{{ SITEURL }}/{{ article.url }}"
+                                >read more</a>
+                        </div><!-- /.entry-content -->
+                    </article>
+                </div>
             {% endif %}
-        {# other items #}
-        {% else %} 
-            <li><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title}}">{{ article.title }}</a></li>
-        {% endif %}
-        {% if loop.length > 1 %}
-        </ol>
-        </section><!-- #article-list -->
-        {% endif %}
-    {% endfor %}
-{% else %}
-    No posts found.
-{% endif %}
+
+            {% if loop.last %}
+                {% if loop.last and (articles_page.has_previous() 
+                or not articles_page.has_previous() and loop.length > 1) %}
+                    {% include 'pagination.html' %}
+                {% endif %}
+                </section><!-- /#content -->
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+{% endfor %}
+
 {% endblock content %}
