--- a/themes/default/templates/social.html
+++ b/themes/default/templates/social.html
@@ -1,5 +1,5 @@
 <div style="text-align: center;">
-  <a href="/{{ CATEGORY_FEED_ATOM | format('issues')}}">RSS</a> |
+  <a href="{{ SITEURL }}/{{ CATEGORY_FEED_ATOM | format('issues')}}">RSS</a> |
   <a href="http://t.me/techshack">Telegram</a> <br>
   <a href="https://facebook.com/techshack.weekly/">Facebook</a> |
   <a href="https://twitter.com/TechshackWeekly/">Twitter</a>
