--- a/themes/default/templates/social.html
+++ b/themes/default/templates/social.html
@@ -1,4 +1,4 @@
-<div style="text-align: center;">
+<div>
   <a href="{{ SITEURL }}/{{ CATEGORY_FEED_ATOM | format('issues')}}">RSS</a> |
   <a href="http://t.me/techshack">Telegram</a> <br>
   <a href="https://facebook.com/techshack.weekly/">Facebook</a> |
