--- a/themes/default/templates/index.html
+++ b/themes/default/templates/index.html
@@ -2,58 +2,23 @@
 {% block robots %}follow{% endblock %}
 {% block content_title %}{% endblock %}
 {% block content %}
-
-{% for category, articles in categories %}
+{% for category, issues in categories %}
     {% if category == 'issues' %}
-        {% for article in articles %}
-            {# First item #}
-            {% if loop.first and not articles_page.has_previous() %}
-                <aside id="featured" class="body">
-                    <article>
-                        <h1 class="entry-title"><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1> 
-                        {{ article.content }}
-                        <a class="readmore" href="{{ SITEURL }}/{{ article.url }}"
-                            >read more</a>
-                    </article>
-                    {% if loop.length == 1 %}
-                        {% include 'pagination.html' %}
-                    {% endif %}
-                </aside><!-- /#featured -->
-                {% if loop.length > 1 %}
-                    <section id="content" class="body">
-                        <hr />
-                        <ol id="posts-list" class="hfeed">
-                {% endif %}
-            {# other items #}
-            {% else %} 
-                {% if loop.first and articles_page.has_previous %}
-                    <section id="content" class="body">
-                {% endif %}
-                <div>
-                    <article class="hentry">
-                        <header>
-                            <h3>
-                                <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
-                                    title="Permalink to {{ article.title|striptags }}"
-                                    >{{ article.title }}</a>
-                            </h3>
-                        </header>
-                        <div class="entry-content">
-                            {{ article.summary }}
-                            <a class="readmore" href="{{ SITEURL }}/{{ article.url }}"
-                                >read more</a>
-                        </div><!-- /.entry-content -->
-                    </article>
+        {% for issue in issues %}
+            <article class="hentry">
+                <header>
+                    <h3>
+                        <a href="{{ SITEURL  }}/{{ issue.url  }}" rel="bookmark"
+                            title="Permalink to {{ issue.title|striptags  }}"
+                            >{{ issue.title  }}</a>
+                    </h3>
+                </header>
+                <div class="entry-content">
+                    {{ articles | newsletter_verses(issue) | newsletter_content(issue) | md}}
+                    <a class="readmore" href="{{ SITEURL  }}/{{ issue.url  }}"
+                            >阅读更多</a>
                 </div>
-            {% endif %}
-
-            {% if loop.last %}
-                {% if loop.last and (articles_page.has_previous() 
-                or not articles_page.has_previous() and loop.length > 1) %}
-                    {% include 'pagination.html' %}
-                {% endif %}
-                </section><!-- /#content -->
-            {% endif %}
+            </article>
         {% endfor %}
     {% endif %}
 {% endfor %}
