--- a/themes/default/templates/social.html
+++ b/themes/default/templates/social.html
@@ -1,6 +1,14 @@
-<div>
-  <a href="{{ SITEURL }}/{{ CATEGORY_FEED_ATOM | format('issues')}}">RSS</a> |
-  <a href="http://t.me/techshack">Telegram</a> <br>
-  <a href="https://facebook.com/techshack.weekly/">Facebook</a> |
-  <a href="https://twitter.com/TechshackWeekly/">Twitter</a>
+<div class="entry-subscription">
+    <h5>Techshack Weekly</h5>
+    <br>
+    专注于后端技术阅读
+    <br>
+    目前有上百位订阅者。
+    <br>
+    欢迎加入 <a href="https://t.me/techshack">Telegram Channel</a> ，
+    <br>
+    关注推特 <a href="https://twitter.com/techshackweekly">@techshackweekly</a>。
+    <br>
+    订阅 <a href="{{ SITEURL }}/{{ CATEGORY_FEED_ATOM | format('issues')}}">RSS</a>
+    <hr>
 </div>
