--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
+    <title>{% block title %}{{ SITENAME }} {% if article %}- {{article.title}}{% endif %}{%endblock%}</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" />
@@ -33,8 +33,14 @@
                     </a>
                 </h1>
                 <span class="description">{{ DESCRIPTION }} </span>
-                <div>{% include "subscribe.html" %}</div>
                 <div>{% include "social.html" %}</div>
+                <div>{% include "subscribe.html" %}</div>
+                {% if categories|length > 1 %}
+                    <div>:: <a href="{{ SITEURL }}/categories.html">Categories</a></div>
+                {% endif %}
+                {% if tags|length > 1 %}
+                    <div>:: <a href="{{ SITEURL }}/tags.html">Tags</a></div>
+                {% endif %}
                 <!-- <span class="feed"><a href="">RSS</a> | <a href="">Atom</a></span> -->
             </div>
             <div id="content" class="col-lg-8">
@@ -50,12 +56,6 @@
                         {% for page in pages %}
                             <li><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a>{% if not loop.last %} ::{% endif %}</li>
                         {% endfor %}
-                        {% if categories|length > 1 %}
-                            <li>:: <a href="{{ SITEURL }}/categories.html">Categories</a></li>
-                        {% endif %}
-                        {% if tags|length > 1 %}
-                            <li>:: <a href="{{ SITEURL }}/tags.html">Tags</a></li>
-                        {% endif %}
                         </ul>
                     </nav>
                 </div>
