add follow & tg channel icon.

--- a/themes/default/templates/article.html
+++ b/themes/default/templates/article.html
@@ -6,5 +6,7 @@
     {{ super() }}
   {% elif article.category == 'issues' %}
     {% include "issue.html" %}
+  {% else %}
+    {{ article.content }}
   {% endif %}
 {% endblock %}
