--- a/themes/default/templates/social.html
+++ b/themes/default/templates/social.html
@@ -5,10 +5,14 @@
     <br>
     目前有上百位订阅者。
     <br>
+    订阅 <a href="{{ SITEURL }}/{{ CATEGORY_FEED_ATOM | format('issues')}}">RSS</a>
+    <br>
     欢迎加入 <a href="https://t.me/techshack">Telegram Channel</a> ，
+    <br>
+    <iframe src="https://tgwidget.com/widget/count/?id=5a66b26483ba88e7118b4568" frameborder="0" scrolling="no" horizontalscrolling="no" verticalscrolling="no" width="160px" height="50px" async></iframe>
     <br>
     关注推特 <a href="https://twitter.com/techshackweekly">@techshackweekly</a>。
     <br>
-    订阅 <a href="{{ SITEURL }}/{{ CATEGORY_FEED_ATOM | format('issues')}}">RSS</a>
+    <a href="https://twitter.com/TechshackWeekly?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @TechshackWeekly</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <hr>
 </div>
