--- a/themes/default/templates/article-base.html
+++ b/themes/default/templates/article-base.html
@@ -14,17 +14,8 @@
 {% block content %}
 <section id="content" class="body">
   <header>
-    <h2 class="entry-title">
-      <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
-         title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2>
- {% import 'translations.html' as translations with context %}
- {{ translations.translations_for(article) }}
+    <h2 class="entry-title">{{ article.title }}</h2>
   </header>
-  <footer class="post-info">
-    <time class="published" datetime="{{ article.date.isoformat() }}">
-      {{ article.locale_date }}
-    </time>
-  </footer><!-- /.post-info -->
   <div class="entry-content">
     {% block article_content %}
     {{ article.content }}
